# simulation-core

./: .gitignore  README.md  main.py  monitor_config_example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/data-contracts/: README.md
docs/engine/: README.md
docs/monitor/: README.md
docs/observation-identity-migration/: README.md  av-wrapper-prompt.md  pisa-api-prompt.md  sim-wrapper-prompt.md
docs/sampler/: README.md
docs/wrappers/: README.md
runner/: av_wrapper.py  runner.py  sim_wrapper.py
runner/monitor/: monitor.py
sampler_config_examples/: README.md  explicit.yaml  grid.yaml  lhs.yaml  parameter_space.yaml  sobol.yaml
simcore/: av_wrapper.py  concrete_result_store.py  engine.py  execution.py  execution_manifest.py  monitor.py  runtime_actors.py  sim_wrapper.py
simcore/conditions/: __init__.py  condition.py  condition_node.py  condition_registry.py  evaluation.py  logical_nodes.py  timeout.py  tree_builder.py
simcore/metrics/: __init__.py  actors.py  collision.py  expressions.py  pair_criticality.py  relative_position.py  rules.py  ttc.py
simcore/monitor/: base.py
simcore/monitoring/: __init__.py  frame_recorder_registry.py  geometry.py  log_manager.py  recorder_registry.py  sample.py  (+1 more)
simcore/utils/: sps.py  (+5 more)
specs/: monitor_config_example.yaml
tests/: test_av_observation.py  test_collision_condition.py  test_component_identity.py  test_concrete_result_store.py  test_engine_summary_skip.py  test_execution.py  test_execution_manifest.py  test_feedback_boundary_sampler.py  test_kinematic_threshold_condition.py  test_monitor_logging.py  test_numeric_rules.py  test_numeric_summary_recorder.py  test_pair_criticality_metrics.py  test_pair_ttc_condition.py  test_parameter_expression_condition.py  test_position_parser.py  test_reach_target_position_condition.py  test_relative_position_condition.py  test_relative_position_metrics.py  test_runtime_actors.py  test_sampler.py  test_sampler_tester.py  test_sim_wrapper.py  test_smoke.py  test_ttc_metrics.py
(+71 files in other folders)
